# chronicle-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docs/: architecture.md
scripts/: e2e-run.sh  sync-s3.sh
src/collector/: bot.py  config.py
src/collector/cogs/: recording.py
src/collector/consent/: manager.py  types.py  views.py
src/collector/utils/: discord_helpers.py  logging.py
src/collector/voice/: recorder.py
test-soak/: matrix.py  soak.py
voice-capture/: Cargo.toml  Dockerfile
voice-capture/src/: api_client.rs  config.rs  harness.rs  main.rs  session.rs  state.rs
voice-capture/src/commands/: consent.rs  mod.rs  record.rs  respond.rs  stop.rs
voice-capture/src/consent/: embeds.rs  manager.rs  mod.rs
voice-capture/src/session/: actor.rs
voice-capture/src/storage/: bundle.rs  mod.rs  s3.rs
voice-capture/src/voice/: events.rs  mod.rs  receiver.rs
