[package]
name = "ttrpg-collector"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ttrpg-collector"
path = "src/main.rs"

[dependencies]
# Discord
serenity = { version = "0.12", default-features = false, features = [
    "gateway", "voice", "rustls_backend", "model", "cache"
] }
songbird = { git = "https://github.com/serenity-rs/songbird.git", branch = "next", features = [
    "receive", "driver"
] }

# Async
tokio = { version = "1", features = ["full"] }

# Config + CLI
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto (pseudonymization)
sha2 = "0.10"
hex = "0.4"

# S3 upload
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TLS
rustls = { version = "0.23", features = ["ring"] }

# Utils
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
